tests/negative/test_sym_name_reserved.orb
fnc main () () {
    sym cn:i32;
};